Fix a grammar nit.

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1147,7 +1147,7 @@ for example, a platform such as Windows, whose NTFS file system is case-insensit
 and a platform such as Linux, whose file system is case-sensitive.
 Consider a scenario where a tool runs on a Windows system using NTFS,
 and the tool decides to lower-case the file names in the log.
-If the source files and the SARIF log are transferred to a Linux system,
+If the source files and the SARIF log were transferred to a Linux system,
 the URIs in the log file would not match the path names on the destination system. </p></div><h3 id="fileformat-uribaseidproperties"  data-line="30;document\FileFormat.mdk:74"  style="bookmark:5.3.&#8194;URI base id properties"><span data-line="30;document\FileFormat.mdk:74"></span><span class="heading-before"><span class="heading-label">5.3</span>.&#8194;</span><span data-line="30;document\FileFormat.mdk:74"></span>URI base id properties</h3>
 <p data-line="30;document\FileFormat.mdk:76"><span data-line="30;document\FileFormat.mdk:76"></span>Certain objects in this specification which have a URI-valued property (<span data-line="30;document\FileFormat.mdk:76"></span>&#167;<span data-line="30;document\FileFormat.mdk:76"></span><a href="#fileformat-uriproperties" title="5.2.&#8194;URI-valued properties" class="localref" style="target-element:h2"><span class="heading-label">5.2</span></a><span data-line="30;document\FileFormat.mdk:76"></span>)
 also have a property that is described as being a <span data-line="30;document\FileFormat.mdk:77"></span>&#8220;URI base id&#8221;<span data-line="30;document\FileFormat.mdk:77"></span>.
