Change notification.analysisTarget should be .physicalLocation in sample

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -4669,7 +4669,7 @@ which is unrealistic.
           &quot;ruleId&quot;: &quot;C2152&quot;,
           &quot;level&quot;: &quot;error&quot;,
           &quot;message&quot;: &quot;Exception evaluating rule \&quot;C2152\&quot;. Rule disabled; run continues.&quot;,
-          &quot;analysisTarget&quot;: {
+          &quot;physicalLocation&quot;: {
             &quot;uri&quot;: &quot;file:///home/buildAgent/src/crypto/hash.cpp&quot;
           },
           &quot;threadId&quot;: 52,
