Don't mention throw in connection with functionReturn

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -3288,7 +3288,7 @@ between a <span data-line="30;document\FileFormat.mdk:2666"></span><code class="
 </p></li>
 <li class="li ul-li list-star-li loose-li" data-line="30;document\FileFormat.mdk:2684">
 <p data-line="30;document\FileFormat.mdk:2684"><span data-line="30;document\FileFormat.mdk:2684"></span><code class="code code1">&quot;functionReturn&quot;</code><span data-line="30;document\FileFormat.mdk:2684"></span>: This is the location of a statement that returns control from a function or method
-(for example, a <span data-line="30;document\FileFormat.mdk:2685"></span><code class="code code1">return</code><span data-line="30;document\FileFormat.mdk:2685"></span> statement or a <span data-line="30;document\FileFormat.mdk:2685"></span><code class="code code1">throw</code><span data-line="30;document\FileFormat.mdk:2685"></span> statement).
+(for example, a <span data-line="30;document\FileFormat.mdk:2685"></span><code class="code code1">return</code><span data-line="30;document\FileFormat.mdk:2685"></span> statement).
 </p></li></ul>
 
 <div class="isonumberednote block" data-line="30;document\FileFormat.mdk:2687" style="font-size:small">
