Fix typo ("is of" => "is one of")

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1499,7 +1499,7 @@ property is present and contains information for every file in which results wer
         &quot;hashes&quot;: [
             {
                 &quot;value&quot;: &quot;b13ce2678a8807ba0765ab94a0ecd394f869bc81&quot;,
-                &quot;algorithm&quot;: &quot;sha256
+                &quot;algorithm&quot;: &quot;sha256&quot;
             }
         ]
     }
@@ -3093,7 +3093,7 @@ but <span data-line="30;document\FileFormat.mdk:2405"></span><code class="code c
         &quot;kind&quot;: &quot;function&quot;
     }
 }</code></pre></div><h4 id="logicallocation-kind"  data-line="30;document\FileFormat.mdk:2416"  style="bookmark:5.21.3.&#8194;`kind` property"><span data-line="30;document\FileFormat.mdk:2416"></span><span class="heading-before"><span class="heading-label">5.21.3</span>.&#8194;</span><span data-line="30;document\FileFormat.mdk:2416"></span><code class="code code1">kind</code><span data-line="30;document\FileFormat.mdk:2416"></span> property</h4>
-<p class="para-continue" data-line="30;document\FileFormat.mdk:2418"><span data-line="30;document\FileFormat.mdk:2418"></span>A <span data-line="30;document\FileFormat.mdk:2418"></span><code class="code code1">logicalLocation</code><span data-line="30;document\FileFormat.mdk:2418"></span> object should contain a property named <span data-line="30;document\FileFormat.mdk:2418"></span><code class="code code1">kind</code><span data-line="30;document\FileFormat.mdk:2418"></span> whose value is of the following strings,
+<p class="para-continue" data-line="30;document\FileFormat.mdk:2418"><span data-line="30;document\FileFormat.mdk:2418"></span>A <span data-line="30;document\FileFormat.mdk:2418"></span><code class="code code1">logicalLocation</code><span data-line="30;document\FileFormat.mdk:2418"></span> object should contain a property named <span data-line="30;document\FileFormat.mdk:2418"></span><code class="code code1">kind</code><span data-line="30;document\FileFormat.mdk:2418"></span> whose value is one of the following strings,
 if any of those strings accurately describes the construct identified by this object:
 </p>
 <ul class="ul list-star compact" data-line="30;document\FileFormat.mdk:2421">
