Fix filename typo in examples

--- a/Static Analysis Results Interchange Format (SARIF).html
+++ b/Static Analysis Results Interchange Format (SARIF).html
@@ -1495,7 +1495,7 @@ property is present and contains information for every file in which results wer
 <p data-line="30;document\FileFormat.mdk:458"><span data-line="30;document\FileFormat.mdk:458"></span><span class="example-before">EXAMPLE&#160;<span class="example-label">1</span>&#160;&#160;&#160;</span><span data-line="30;document\FileFormat.mdk:458"></span>
 </p>
 <pre class="para-block pre-fenced pre-fenced3" data-line="30;document\FileFormat.mdk:459" data-line-code="30;document\FileFormat.mdk:460"><code data-line="30;document\FileFormat.mdk:460">&quot;files&quot;: {
-    &quot;file:///C:/Code/main.cc&quot;: {
+    &quot;file:///C:/Code/main.c&quot;: {
         &quot;mimeType&quot;: &quot;text/x-c&quot;,
         &quot;hashes&quot;: [
             {
@@ -2840,7 +2840,7 @@ which provides additional information about the file specified by <span data-lin
     {
       &quot;run&quot;: {
         &quot;files&quot;: {
-          &quot;file:///C:/Code/main.cc&quot;: [
+          &quot;file:///C:/Code/main.c&quot;: [
             {
               &quot;mimeType&quot;: &quot;text/x-c&quot;,
             }
@@ -2855,7 +2855,7 @@ which provides additional information about the file specified by <span data-lin
           &quot;locations&quot;: [
             {
               &quot;resultFile&quot;: {
-                &quot;uri&quot;: &quot;file:///C:/Code/main.cc&quot;,
+                &quot;uri&quot;: &quot;file:///C:/Code/main.c&quot;,
                 &quot;region: {
                   &quot;startLine&quot;: 24,
                   &quot;startColumn&quot;: 9
